Fix template complaints

--- a/{{ cookiecutter.repo_name }}/gradle.properties
+++ b/{{ cookiecutter.repo_name }}/gradle.properties
@@ -1,4 +1,6 @@
 group = {{ cookiecutter.group }}
 version = {{ cookiecutter.version }}
+
 kotlinVersion = {{ cookiecutter.kotlin_version }}
+slf4jVersion = 1.7.13
 
