--- a/{{ cookiecutter.repo_name }}/build.gradle
+++ b/{{ cookiecutter.repo_name }}/build.gradle
@@ -14,15 +14,16 @@ repositories {
 }
 
 dependencies {
-    compile 'org.slf4j:slf4j-api:1.7.13'
+    compile "org.slf4j:slf4j-api:${slf4jVersion}"
     compile 'com.google.guava:guava:19.0'
     compile "org.jetbrains.kotlin:kotlin-stdlib:${kotlinVersion}"
 
     runtime 'ch.qos.logback:logback-classic:1.1.3'
-    runtime 'org.slf4j:log4j-over-slf4j:1.7.13'
-    runtime 'org.slf4j:jcl-over-slf4j:1.7.13'
-    runtime 'org.slf4j:jul-to-slf4j:1.7.13'
+    runtime "org.slf4j:log4j-over-slf4j:${slf4jVersion}"
+    runtime "org.slf4j:jcl-over-slf4j:${slf4jVersion}"
+    runtime "org.slf4j:jul-to-slf4j:${slf4jVersion}"
 
     testCompile 'junit:junit:4.12'
+    testCompile 'org.hamcrest:hamcrest-library:1.3'
     testCompile 'org.mockito:mockito-core:2.0.33-beta'
 }
