--- a/{{ cookiecutter.repo_name }}/build.gradle
+++ b/{{ cookiecutter.repo_name }}/build.gradle
@@ -27,3 +27,6 @@ dependencies {
     testCompile 'org.hamcrest:hamcrest-library:1.3'
     testCompile 'org.mockito:mockito-core:2.0.33-beta'
 }
+
+task wrapper(type: Wrapper)
+
