--- a/{{ cookiecutter.repo_name }}/build.gradle.in
+++ b/{{ cookiecutter.repo_name }}/build.gradle.in
@@ -24,6 +24,7 @@ dependencies {
     runtime "org.slf4j:jul-to-slf4j:${slf4jVersion}"
 
     testCompile 'junit:junit:4.12'
+    testCompile "org.jetbrains.kotlin:kotlin-test-junit:${kotlinVersion}"
     testCompile 'org.hamcrest:hamcrest-library:1.3'
     testCompile 'org.mockito:mockito-core:2.0.33-beta'
 }
