Conditional support for the idea plugin

--- a/{{ cookiecutter.repo_name }}/build.gradle
+++ b/{{ cookiecutter.repo_name }}/build.gradle
@@ -8,6 +8,9 @@ buildscript {
 }
 
 apply plugin: 'kotlin'
+{% if cookiecutter.use_intellij_idea == 'yes' %}
+apply plugin: 'idea'
+{% endif %}
 
 repositories {
     mavenCentral()
