--- a/{{ cookiecutter.repo_name }}/build.gradle
+++ b/{{ cookiecutter.repo_name }}/build.gradle
@@ -8,9 +8,9 @@ buildscript {
 }
 
 apply plugin: 'kotlin'
-{% if cookiecutter.use_intellij_idea == 'yes' %}
+{% if cookiecutter.use_intellij_idea == 'yes' -%}
 apply plugin: 'idea'
-{% endif %}
+{%- endif %}
 
 repositories {
     mavenCentral()
